--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     font-size: 300%;
     color: red;
    }
+   .star {
+    color: green;
+   }
   </style>
+  <script>
+   let newCoords => 100*MATH.rand();
+   //let moveStar => document.querySelector()
+  </script>
  </head>
  <body>
   <p class='ng'>С новым годом!</p>
+  <div class='star'>*f'dglhkd'f;lhk'</div>
  </body>
 </html>
