--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </style>
   <script>
    let newCoords => 100*MATH.rand();
-   //let moveStar => document.querySelector()
+   let moveStar => document.querySelector('.star').color='red';
   </script>
  </head>
  <body>
   <p class='ng'>С новым годом!</p>
-  <div class='star'>*f'dglhkd'f;lhk'</div>
+  <div class='star' onClick=moveStar()>*f'dglhkd'f;lhk'</div>
  </body>
 </html>
