--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
    }
   </style>
   <script>
-   let newCoords => 100*MATH.rand();
-   let moveStar => document.querySelector('.star').color='red';
+   function newCoords() {
+    return 100*MATH.rand();
+   }
+   function moveStar() {
+    document.querySelector('.star').color='red';
+   }
   </script>
  </head>
  <body>
