--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     return 100*MATH.rand();
    }
    function moveStar() {
-    document.querySelector('.star').color='red';
+    document.querySelector('.star').style.color='red';
    }
   </script>
  </head>
