--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
  </head>
  <body>
   <p class='ng'>С новым годом!</p>
-  <div class='star' onClick=" document.querySelector('.star').color='red';">*f'dglhkd'f;lhk'</div>
+  <div class='star' onClick="moveStar()">*f'dglhkd'f;lhk'</div>
  </body>
 </html>
