--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
    }
   </style>
   <script>
-   function newCoords() {
-    return 100*MATH.rand();
+   function newCoords(const max) {
+    return Math.floor(((max+1)*Math.random()));
    }
    function moveStar() {
     document.querySelector('.star').style.color='red';
@@ -23,6 +23,6 @@
  </head>
  <body>
   <p class='ng'>С новым годом!</p>
-  <div class='star' onClick="moveStar()">*f'dglhkd'f;lhk'</div>
+  <div class='star' onClick="moveStar();console.log(newCoords(100));">*f'dglhkd'f;lhk'</div>
  </body>
 </html>
