--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    }
   </style>
   <script>
-   function newCoords(const max) {
+   function newCoords(max) {
     return Math.floor(((max+1)*Math.random()));
    }
    function moveStar() {
