--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
    }
    .star {
     color: green;
+    background-color: blue;
+    width:100px; height:30px; top: 100px; left:100px; position:absolute;'
    }
   </style>
   <script>
@@ -17,12 +19,16 @@
     return Math.floor(((max+1)*Math.random()));
    }
    function moveStar() {
-    document.querySelector('.star').style.color='red';
+    const star = document.querySelector('.star');
+    star.style.color='red';
+    star.style.left = newCoords(100) + 'px';
+    star.style.top = newCoords(100) + 'px';
    }
+   
   </script>
  </head>
  <body>
   <p class='ng'>С новым годом!</p>
-  <div class='star' onClick="moveStar();console.log(newCoords(100));">*f'dglhkd'f;lhk'</div>
+  <div class='star' onClick="moveStar()">***'</div>
  </body>
 </html>
