--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
    .star {
     color: green;
     background-color: blue;
-    width:100px; height:30px; top: 100px; left:100px; position:absolute;'
+    border: 1px black solid;
+    width:100px;
+    height: 30px;
+    top: 100px;
+    left: 100px;
+    position: absolute;'
    }
   </style>
   <script>
@@ -21,14 +26,14 @@
    function moveStar() {
     const star = document.querySelector('.star');
     star.style.color='red';
-    star.style.left = newCoords(100) + 'px';
-    star.style.top = newCoords(100) + 'px';
+    star.style.left = newCoords(90) + '%';
+    star.style.top = newCoords(90) + '%';
    }
    
   </script>
  </head>
  <body>
   <p class='ng'>С новым годом!</p>
-  <div class='star' onClick="moveStar()">***'</div>
+  <div class='star' onClick="moveStar()">***</div>
  </body>
 </html>
