--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     color: red;
    }
    .star {
-    color: green;
     border: 1px black solid;
     width:100px;
-    height: 30px;
+    height: 60px;
     top: 100px;
     left: 100px;
     position: absolute;
     font-size: 400%;
    }
+   .star.gn { color: green; }
+   .star.rd { color: red; }
+   .star.mg { color: magenta; }
   </style>
   <script>
    function newCoords(max) {
