--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
  </head>
  <body>
   <p class='ng'>С новым годом!</p>
-  <div class='star'>***</div>
+  <div class='star rd'>***</div>
+  <div class='star gn'>***</div>
+  <div class='star mg'>***</div>
  </body>
 </html>
