--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    }
    function moveStar() {
     const stars = document.querySelectorAll('.star');
-    stars.foreach( star => {
+    stars.forEach( star => {
      star.style.left = newCoords(90) + '%';
      star.style.top = newCoords(90) + '%';
     })
