--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
    function newCoords(max) {
     return Math.floor(((max+1)*Math.random()));
    }
-   function moveStar() {
+   function moveStars() {
     const stars = document.querySelectorAll('.star');
     stars.forEach( star => {
      star.style.left = newCoords(90) + '%';
      star.style.top = newCoords(90) + '%';
     })
    }
-   window.addEventListener('click', event => moveStar());
+   window.addEventListener('click', event => moveStars());
   </script>
  </head>
  <body>
