--- a/index.html
+++ b/index.html
@@ -40,5 +40,17 @@
   <div class='star rd'>***</div>
   <div class='star gn'>***</div>
   <div class='star mg'>***</div>
+  <div class='star rd'>***</div>
+  <div class='star gn'>***</div>
+  <div class='star mg'>***</div>
+  <div class='star rd'>***</div>
+  <div class='star gn'>***</div>
+  <div class='star mg'>***</div>
+  <div class='star rd'>***</div>
+  <div class='star gn'>***</div>
+  <div class='star mg'>***</div>
+  <div class='star rd'>***</div>
+  <div class='star gn'>***</div>
+  <div class='star mg'>***</div>
  </body>
 </html>
