--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    }
    .star {
     border: 1px black solid;
-    width:100px;
-    height: 60px;
+    <!-- width:100px; 
+    height: 60px; -->
     top: 100px;
     left: 100px;
     position: absolute;
@@ -37,20 +37,20 @@
  </head>
  <body>
   <p class='ng'>С новым годом!</p>
-  <div class='star rd'>***</div>
-  <div class='star gn'>***</div>
-  <div class='star mg'>***</div>
-  <div class='star rd'>***</div>
-  <div class='star gn'>***</div>
-  <div class='star mg'>***</div>
-  <div class='star rd'>***</div>
-  <div class='star gn'>***</div>
-  <div class='star mg'>***</div>
-  <div class='star rd'>***</div>
-  <div class='star gn'>***</div>
-  <div class='star mg'>***</div>
-  <div class='star rd'>***</div>
-  <div class='star gn'>***</div>
-  <div class='star mg'>***</div>
+  <div class='star rd'>*</div>
+  <div class='star gn'>*</div>
+  <div class='star mg'>*</div>
+  <div class='star rd'>*</div>
+  <div class='star gn'>*</div>
+  <div class='star mg'>*</div>
+  <div class='star rd'>*</div>
+  <div class='star gn'>*</div>
+  <div class='star mg'>*</div>
+  <div class='star rd'>*</div>
+  <div class='star gn'>*</div>
+  <div class='star mg'>*</div>
+  <div class='star rd'>*</div>
+  <div class='star gn'>*</div>
+  <div class='star mg'>*</div>
  </body>
 </html>
