--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     color: red;
    }
    .star {
-    border: 1px black solid;
-    <!-- width:100px; 
+    <!-- border: 1px black solid;
+    width:100px; 
     height: 60px; -->
     top: 100px;
     left: 100px;
