--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     return Math.floor(((max+1)*Math.random()));
    }
    function moveSmoothly(element, newLeft, newTop) {
-     console.log('el='.element.' newLeft='.newLeft.' newTop='.newTop);
+     console.log('el='+element+' newLeft='+newLeft+' newTop='+newTop);
      element.style.left = newLeft;
      element.style.top = newTop;
    }
