--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     return Math.floor(((max+1)*Math.random()));
    }
    function moveSmoothly(element, newLeft, newTop) {
-     console.log('el='+element+' newLeft='+newLeft+' newTop='+newTop);
+     console.log('el=' + element + ' newLeft=' + newLeft + ' newTop=' + newTop);
      element.style.left = newLeft;
      element.style.top = newTop;
    }
    function moveStars() {
     const stars = document.querySelectorAll('.star');
-    stars.forEach( star => moveSmoothly(star, newCoords(90)+'%', newCoords(90)+'%'); )
+    stars.forEach( star => moveSmoothly(star, newCoords(90)+'%', newCoords(90)+'%') )
    }
    window.addEventListener('click', event => moveStars());
   </script>
