--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ let interval = setInterval(function() {
  <body>
   <p class='ng'>С новым годом!</p>
   <div class='star rd'>*</div>
-  <div class='star gn'>*</div>
-  <div class='star mg'>*</div>
+  <!-- <div class='star gn'>*</div>
+  <div class='star mg'>*</div> -->
  </body>
 </html>
