--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script>
+   var snow_intensity = 50; // smaller number = more snowflakes;
+   
 function Snowflake(){
   var snowflake = this;
   snowflake.x = (Math.random() * $(document).width());
