--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ let interval = setInterval(function() {
  </head>
  <body>
   <p class='ng'>С новым годом!</p>
-  <div class='star rd'>*</div>
-  <!-- <div class='star gn'>*</div>
+  <!-- <div class='star rd'>*</div>
+  <div class='star gn'>*</div>
   <div class='star mg'>*</div> -->
  </body>
 </html>
