--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ let interval = setInterval(function() {
    window.addEventListener('click', event => moveStars());
   </script>
  </head>
- <body>
+ <body class='fireworks'>
   <p class='ng'>С новым годом!</p>
   <!-- <div class='star rd'>*</div>
   <div class='star gn'>*</div>
