--- a/index.html
+++ b/index.html
@@ -2,111 +2,12 @@
 <html lang=ru>
  <head>
   <title>С новым 2026 годом!</title>
-  <style>
-   body {background: CornflowerBlue;overflow:hidden;}
-   .snowflake{
-    position:absolute;
-    top:-40px;
-    transition: left 5s;
-    opacity:1;
-    color: #fff;
-    -webkit-animation:spin 4s linear infinite;
-    -moz-animation:spin 4s linear infinite;
-    animation:spin 4s linear infinite;
-  }
-  @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-  @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-  @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
-
-   .ng {
-    font-weight: bold;
-    font-size: 300%;
-    color: red;
-   }
-   .star {
-    top: 100px;
-    left: 100px;
-    position: absolute;
-    font-size: 400%;
-   }
-   .star.gn { color: green; }
-   .star.rd { color: red; }
-   .star.mg { color: magenta; }
-  </style>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="index.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script type="module" src="index.js"></script>
   <script>
-   var snow_intensity = 50; // smaller number = more snowflakes;
-   
-   function Snowflake(){
-     var snowflake = this;
-     snowflake.x = (Math.random() * $(document).width());
-     snowflake.size = (Math.random() * 35) + 10;
-     snowflake.opacity = Math.random();
-     snowflake.body = $("<em class='snowflake'>*</em>");
-     snowflake.body.css({'font-size': this.size + 'px', 'left': this.x +'px', opacity: this.opacity });
-     snowflake.fall = function(){
-       var that = this;
-       var $snowflake = this.body;
-       var swing_direction = 1;
-       var swing_wave = Math.random() * 100;
-       var interval = setInterval(function(){
-         $snowflake.css({left: that.x + (swing_direction * swing_wave)});
-         swing_direction = - swing_direction;
-       }, 1000);
-       var speed = (Math.random() * 3000) + 3000;
-       $snowflake.animate({top: '100vh'}, speed, function(){
-         clearInterval(interval);
-         $snowflake.remove();
-       });    
-     }
-     $('body').append(snowflake.body);
-     snowflake.fall();
-   }
-
-   var snow = window.setInterval(function () {
-      new Snowflake();
-   }, snow_intensity);
-
-   document.onkeypress = function () {
-     window.clearInterval(snow);
-   };
-   
-   function newCoords(max) {
-    return Math.floor(((max+1)*Math.random()));
-   }
-   
-   function moveSmoothly(element, newLeft, newTop) {
-    const steps = 10;
-    const timeSecs = 1;
-    const stepTime = timeSecs / steps;
-    let positionTop = 0;
-    let positionLeft = 0;
-
-let interval = setInterval(function() {
-  const { bottom, right } = element.getBoundingClientRect();
-  const clientW = window.innerWidth;
-  const clientH = window.innerHeight;
-  if (clientH - bottom !== newTop) {
-    positionTop += 1;
-    element.style.top = positionTop + 'px';
-  }
-  if (clientW - right !== newLeft) {
-    positionLeft += 1;
-    element.style.left = positionLeft + 'px';
-  }
-  //if (right === clientW && bottom === clientH) { clearInterval(interval); }
-  if (right === clientW && bottom === clientH) { clearInterval(interval); }
-}, stepTime*1000);
-    //element.style.left = newLeft;
-    //element.style.top = newTop;
-   }
-   
-   function moveStars() {
-    const stars = document.querySelectorAll('.star');
-    stars.forEach( star => moveSmoothly(star, newCoords(90)+'%', newCoords(90)+'%') )
-   }
-   window.addEventListener('click', event => moveStars());
   </script>
  </head>
  <body class='fireworks'>
