--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!doctype html>
 <html lang=ru>
  <head>
-  <title>С новым 2026 годом!</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>С новым 2026 годом!</title>
   <link rel="stylesheet" href="index.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="module" src="index.js"></script>
-  <script>
-  </script>
  </head>
- <body class='fireworks'>
+ <body>
   <p class='ng'>С новым годом!</p>
   <!-- <div class='star rd'>*</div>
   <div class='star gn'>*</div>
