--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>С новым 2026 годом!</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="./index.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="module" src="index.js"></script>
  </head>
