--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>С новым 2026 годом!</title>
   <link rel="stylesheet" href="./index.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="module" src="index.js"></script>
+  <script src="index.js"></script><!-- type="module" -->
  </head>
  <body>
   <p class='ng'>С новым годом!</p>
