--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>С новым 2026 годом!</title>
   <link rel="stylesheet" href="./index.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js"></script>
   <script src="index.js"></script><!-- type="module" -->
  </head>
  <body>
