--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>С новым 2026 годом!</title>
   <link rel="stylesheet" href="./index.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
   <script src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js"></script>
-  <script src="index.js"></script><!-- type="module" -->
+  <!-- <script src="index.js"></script> --><!-- type="module" -->
  </head>
- <body>
+ <body class='fireworks-container'>
   <p class='ng'>С новым годом!</p>
   <!-- <div class='star rd'>*</div>
   <div class='star gn'>*</div>
