--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
   <script src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js"></script>
   <!-- <script src="index.js"></script> --><!-- type="module" -->
+ <script>
+  const container = document.querySelector('.fireworks')
+  const fireworks = new Fireworks.default(container)
+  fireworks.start()
+ </script>
  </head>
  <body class='fireworks-container'>
   <p class='ng'>С новым годом!</p>
