--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js"></script>
   <!-- <script src="index.js"></script> --><!-- type="module" -->
  <script>
+  import { Fireworks } from 'fireworks-js'
+  
   const container = document.querySelector('.fireworks')
   const fireworks = new Fireworks.default(container)
   fireworks.start()
