--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<!doctype html>
-<html lang=ru>
- <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>С новым 2026 годом!</title>
-  <link rel="stylesheet" href="./index.css" />
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
-  <!-- <script src="index.js"></script> --><!-- type="module" -->
- </head>
- <body>
-  <p class='ng'>С новым годом!</p>
-  <!-- <div class='star rd'>*</div>
-  <div class='star gn'>*</div>
-  <div class='star mg'>*</div> -->
- </body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>С новым 2026 годом!</title>
+ <link rel="stylesheet" href="index.css">
+</head>
+<body>
+ <div class="container">
+  <div class="shooting-star"></div>
+  <h1 class="wish">С новым 2026 годом!</h1>
+  <img class="tree" src="https://raw.githubusercontent.com/farazc60/Project-Images/refs/heads/main/christmas/christmasTree.webp" alt="">
+  <img class="snow-hill" src="https://raw.githubusercontent.com/farazc60/Project-Images/refs/heads/main/christmas/snowyHills.webp" alt="">
+ </div>
+ <canvas id="snow"></canvas>
+ <script src="script.js"></script>
+</body>
 </html>
