--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <img class="snow-hill" src="https://raw.githubusercontent.com/farazc60/Project-Images/refs/heads/main/christmas/snowyHills.webp" alt="">
  </div>
  <canvas id="snow"></canvas>
- <script src="script.js"></script>
+ <script src="index.js"></script>
 </body>
 </html>
