--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
  <div class="container">
   <div class="shooting-star"></div>
   <h1 class="wish">С новым 2026 годом!</h1>
-  <img class="tree" src="https://raw.githubusercontent.com/farazc60/Project-Images/refs/heads/main/christmas/christmasTree.webp" alt="">
-  <img class="snow-hill" src="https://raw.githubusercontent.com/farazc60/Project-Images/refs/heads/main/christmas/snowyHills.webp" alt="">
+  <!-- <img class="tree" src="https://raw.githubusercontent.com/farazc60/Project-Images/refs/heads/main/christmas/christmasTree.webp" alt=""> -->
+  <!-- <img class="snow-hill" src="https://raw.githubusercontent.com/farazc60/Project-Images/refs/heads/main/christmas/snowyHills.webp" alt=""> -->
+  <img class="tree" src="christmasTree.webp" alt="">
+  <img class="snow-hill" src="snowyHills.webp" alt="">
  </div>
  <canvas id="snow"></canvas>
  <script src="index.js"></script>
